Add method for listing all users in a group
