# main.go
@@ -22,7 +22,7 @@ func main() {
 	{
 		v1.GET("/user/:upn", aadgroup.GetUser)
 		v1.DELETE("/user", aadgroup.RemoveUser)
-		v1.GET("/users", aadgroup.GetUsers)
+		v1.GET("/users/:groupObjectId", aadgroup.GetUsers)
 		v1.POST("/users", aadgroup.AddUsers)
 	}
 	router.GET("/aadgroup/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
